redirecionando a logo da grato para o index.html na pagina universidade.html

--- a/universidade.html
+++ b/universidade.html
@@ -44,7 +44,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#inicio" class="nav__logo">
+            <a href="index.html" class="nav__logo">
                 <span class="nav__logo-circle"><img src="assets/imgs/Logo.svg"></span>
                 <span class="nav__logo-name"></span>
             </a>
