trocando a classe da div abaixo do inicio abaixo da section da pagina universidade.html

--- a/universidade.html
+++ b/universidade.html
@@ -98,7 +98,7 @@
         <!--==================== INICIO ====================-->
         <section class="home section" id="inicio"> 
             
-            <div class="home__container container grid">
+            <div class="home__container-4 container grid">
                 
                 <h1 class="home__name">
                     Descubra o Poder da Gratidão
