comentado o codigo dos topicos relacionados a compra

--- a/universidade.html
+++ b/universidade.html
@@ -329,7 +329,7 @@
 
             <div class="home__info">
                 
-                <div class="topic-1 topic">
+                <!-- <div class="topic-1 topic">
                     <img src="assets/imgs/ilustration-5.svg">
                     <h4 class="home__name">
                         Compra Segura
@@ -357,7 +357,7 @@
                     <p class="home__description">
                         Inscreva-se para acesso exclusivo e ofertas especiais.
                     </p>
-                </div>
+                </div> -->
 
                 </a>
                 
