removendo as divs container-preco-1 e container-preco-2

--- a/universidade.html
+++ b/universidade.html
@@ -341,6 +341,28 @@
                         <div>
                     </div>
 
+                       <!-- container-preco (dimensão: 461px X 137px )-->
+                       <div class="container-preco-1">
+                        <div class="container-logo">
+                            <img src="assets/imgs/ilustration-5.svg">
+                        </div>
+                        <div class="container-desc">
+                            <h4>Compra Segura</h4>
+                            <p>Transações seguras e protegidas. Compre com confiança.</p>
+                        <div>
+                    </div>
+
+                       <!-- container-preco (dimensão: 461px X 137px )-->
+                       <div class="container-preco-1">
+                        <div class="container-logo">
+                            <img src="assets/imgs/ilustration-5.svg">
+                        </div>
+                        <div class="container-desc">
+                            <h4>Compra Segura</h4>
+                            <p>Transações seguras e protegidas. Compre com confiança.</p>
+                        <div>
+                    </div>
+
 
                 </div>
                 
