aletrando a div home-container final para home__info

--- a/universidade.html
+++ b/universidade.html
@@ -328,7 +328,7 @@
 
 
 
-                <div class="container-final">
+                <div class="home__info">
 
                     <!-- container-preco (dimensão: 461px X 137px )-->
                     <div class="container-preco-1">
