aletarando home__info para home__contaioner-99

--- a/universidade.html
+++ b/universidade.html
@@ -100,7 +100,7 @@
             
             <div class="home__container-4 container grid">
                 
-                <div class="home__info">
+                <div class="home__container-99">
 
                     <h1 class="home__name">
                         Descubra o Poder da Gratidão
