--- a/universidade.html
+++ b/universidade.html
@@ -114,7 +114,7 @@
                         </p>
                         
                     </div>
-                    
+
                     <div class="home__perfil">
                         <div class="home__image">
                             <img src="assets/imgs/ilustration-9.svg" alt="image" class="home__img">                            
@@ -327,37 +327,46 @@
 
                 <div class="home__info">
 
-                    <!-- container-preco (dimensão: 461px X 137px )-->
-                    <div class="container-preco-1">
-                        <div class="container-logo">
-                            <img src="assets/imgs/ilustration-5.svg">
+                    <div class="container-valor">
+
+                        <!-- container-preco (dimensão: 461px X 137px )-->
+                        <div class="container-preco-1">
+                            <div class="container-logo">
+                                <img src="assets/imgs/ilustration-5.svg">
+                            </div>
+                            <div class="container-desc">
+                                <h4>Compra Segura</h4>
+                                <p>Transações seguras e protegidas. Compre com confiança.</p>
+                            <div>
                         </div>
-                        <div class="container-desc">
-                            <h4>Compra Segura</h4>
-                            <p>Transações seguras e protegidas. Compre com confiança.</p>
-                        <div>
+
                     </div>
 
-                       <!-- container-preco (dimensão: 461px X 137px )-->
-                    <div class="container-preco-1">
-                        <div class="container-logo">
-                            <img src="assets/imgs/ilustration-5.svg">
+                    <div class="container-valor"></div>
+                        <!-- container-preco (dimensão: 461px X 137px )-->
+                        <div class="container-preco-1">
+                            <div class="container-logo">
+                                <img src="assets/imgs/ilustration-5.svg">
+                            </div>
+                            <div class="container-desc">
+                                <h4>Compra Segura</h4>
+                                <p>Transações seguras e protegidas. Compre com confiança.</p>
+                            <div>
                         </div>
-                        <div class="container-desc">
-                            <h4>Compra Segura</h4>
-                            <p>Transações seguras e protegidas. Compre com confiança.</p>
-                        <div>
                     </div>
 
-                       <!-- container-preco (dimensão: 461px X 137px )-->
-                    <div class="container-preco-1">
-                        <div class="container-logo">
-                            <img src="assets/imgs/ilustration-5.svg">
+
+                    <div class="container-valor">
+                        <!-- container-preco (dimensão: 461px X 137px )-->
+                        <div class="container-preco-1">
+                            <div class="container-logo">
+                                <img src="assets/imgs/ilustration-5.svg">
+                            </div>
+                            <div class="container-desc">
+                                <h4>Compra Segura</h4>
+                                <p>Transações seguras e protegidas. Compre com confiança.</p>
+                            <div>
                         </div>
-                        <div class="container-desc">
-                            <h4>Compra Segura</h4>
-                            <p>Transações seguras e protegidas. Compre com confiança.</p>
-                        <div>
                     </div>
 
 
