retirando a propriedade display: flex, e justify-contenet: center;

--- a/universidade.html
+++ b/universidade.html
@@ -187,7 +187,7 @@
 
     <section class="home section" id="e-books">
         <div class="home__container-2 container grid">
-            <h1 class="home__name">
+            <h1 class="home__name-4">
                 </br>
                 E-Books
             </h1>
