aletrando a div da unviersidade para home__namer-44

--- a/universidade.html
+++ b/universidade.html
@@ -144,7 +144,7 @@
 
         <section class="home section" id="universidade">
             <div class="home__container-2 container grid">
-                <h1 class="home__name">
+                <h1 class="home__name-44">
                     <img src="assets/imgs/ilustration-10.svg" class="home__img-9" alt="">
                 </br>
                     Universidade
