aletrandoo nome da div de class home__name, para home__name-22

--- a/universidade.html
+++ b/universidade.html
@@ -275,7 +275,7 @@
 
     <section class="home section" id="planner">
         <div class="home__container-3 container grid">
-            <h1 class="home__name">
+            <h1 class="home__name-22">
             </br>
                 Planner Diário
             </h1>
