duplicando a div home__name principal

--- a/universidade.html
+++ b/universidade.html
@@ -102,7 +102,7 @@
                 
                 <div class="home__container-99">
 
-                    <h1 class="home__name">
+                    <h1 class="home__name-principal">
                         Descubra o Poder da Gratidão
                     </h1>
                     
