--- a/universidade.html
+++ b/universidade.html
@@ -327,7 +327,7 @@
 
                 <div class="home__info">
 
-                    <div class="container-valor">
+                    <div class="container-final">
 
                         <!-- container-preco (dimensão: 461px X 137px )-->
                         <div class="container-preco-1">
@@ -345,6 +345,7 @@
                                 <p>Transações seguras e protegidas. Compre com confiança.</p>
 
                             <div>
+                                
                         </div>
 
 
